css/tailwind.css
/* @import 'waline.css'; */

@tailwind base;
@tailwind components;
@tailwind utilities;

.leaflet-pane {
  z-index: 10 !important;
}
.leaflet-control{
  z-index: 10 !important;
}

/* Lorsque l'élément est ciblé via une ancre (#) */
:target::before {
  content: '';
  display: block;
  height: 80px; /* La hauteur du header sticky */
  margin-top: -80px;
}

#background {
  scrollbar-gutter: stable;
  width: 100vw; /* Fixe la largeur du conteneur */
  max-width: 100%; /* Assure que le conteneur ne dépasse pas la largeur de la fenêtre */
  overflow-x: hidden;
}

:root {
  --background-color-light: #f5f5f4; /* Fond clair gray-100 */
  --background-color-dark: #0f172a; /* Fond sombre gray-900 */
}

html {
  overflow-y: hidden;
}

body {
  background-color: var(--background-color-light);
  overflow-y: hidden;
}

html.dark body {
  background-color: var(--background-color-dark);
}

.fancybox-wrapper {
  cursor: pointer; /* Le curseur devient une main */
  position: relative; /* Nécessaire pour Next.js avec layout="intrinsic" */
  display: block; /* Évite les problèmes d'alignement */
  max-width: 100%; /* Empêche l'image de dépasser la largeur du conteneur */
  margin: 0 auto; /* Centrage si nécessaire */  
}

.fancybox-wrapper img {
  pointer-events: none; /* Empêche l'image d'intercepter les événements, la gestion se fait par la div */
}

@media (max-width: 768px) {
  .fancybox-wrapper img {
    max-height: 100vh; /* Empêche l'image de dépasser la hauteur visible */
    object-fit: contain; /* Maintient le ratio tout en s'adaptant */
  }
}

.right-2 {
  right: 0.5rem;
}

.top-2 {
  top: .5rem;
}

.bg-gray-700 {
  --tw-bg-opacity: 1;
  background-color: rgb(55 65 81/var(--tw-bg-opacity));
}

.text-gray-300 {
  --tw-text-opacity: 1;
  color: rgb(209 213 219/var(--tw-text-opacity));
}

.border-green-400 {
  --tw-border-opacity: 1;
  border-color: rgb(74 222 128 / var(--tw-border-opacity));
}

.text-green-400 {
  --tw-text-opacity: 1;
  color: rgb(74 222 128 / var(--tw-text-opacity));
}

.task-list-item::before {
  @apply hidden;
}

.task-list-item {
  @apply list-none;
}

.footnotes {
  @apply mt-12 border-t border-gray-200 pt-8 dark:border-gray-700;
}

.data-footnote-backref {
  @apply no-underline;
}

.csl-entry {
  @apply my-5;
}

/* Personnalise la barre de défilement uniquement pour la div contenant le contenu défilant */
.overflow-y-auto {
  overflow-y: auto;
  -webkit-overflow-scrolling: touch; /* Optimise le défilement pour mobile */
}

/* Personnalisation de la scrollbar pour qu'elle suive le thème du navigateur */

/* La barre de défilement elle-même */
.overflow-y-auto::-webkit-scrollbar {
  width: 8px;  
  height: 8px;
}

/* Pour mobile et écrans étroits */
@media (max-width: 768px) {
  .overflow-y-auto::-webkit-scrollbar {
    width: 2px;
    height: 2px;
  }
}

/* La piste de la barre de défilement */
.overflow-y-auto::-webkit-scrollbar-track {
  background: transparent;
}

/* Le "pouce" de la barre de défilement (partie déplaçable) */
.overflow-y-auto::-webkit-scrollbar-thumb {
  background-color: rgba(40, 27, 22, 0.5);
  border-radius: 5px;
}

/* Option pour un thème sombre */
html.dark .overflow-y-auto::-webkit-scrollbar-thumb {
  background-color: rgba(255, 255, 255, 0.5);
}

/* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition:
    background-color 600000s 0s,
    color 600000s 0s;
}

.katex-display {
  overflow: auto hidden;
}

.content-header-link {
  opacity: 0;
  margin-left: -24px;
  padding-right: 4px;
}

.content-header:hover .content-header-link,
.content-header-link:hover {
  opacity: 1;
}

.linkicon {
  display: inline-block;
  vertical-align: middle;
}

